src/test/deca/context/invalid/provided/testi18.deca
//Resultats :
//Erreur contextuelle
//Ligne 7 : Invalid cast
{
    boolean b = true;
    float x;
    x = (float)(b);
}